Fix width of code samples on mobile devices

--- a/src/_includes/assets/styles/inline.css
+++ b/src/_includes/assets/styles/inline.css
@@ -378,7 +378,7 @@ pre[class*="language-"].codeWrapper {
     max-width: var(--siteMaxWidth);
 }
 
-@media screen and (min-width: 41rem) {
+@media screen and (min-width: 40rem) {
     pre[class*="language-"].codeWrapper {
         width: 100%;
     }
